# stab-decomp-simulator-rust

./: .flake8  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  paper.bib  paper.md  pyproject.toml
.github/: ci.yml
.github/workflows/: ci.yml  docs.yml  draft-pdf.yml  release.yml  test.yml
core/: Cargo.toml
core/src/: lib.rs
core/src/circuit/: gates.rs  mod.rs  parser.rs  random_clifford.rs
core/src/error/: mod.rs
core/src/state/: mod.rs
core/src/state/compiler/: error.rs  mod.rs
core/src/state/magic_states/: cat_state.rs  t_state.rs  toffoli_state.rs
core/src/state/stabilizer_decomposed_state/: discard.rs  exp_value.rs  gates.rs  inner_product.rs  kron.rs  measurement.rs  mod.rs  norm.rs  pauli_application.rs  projection.rs  sampling.rs  statevector.rs
core/src/state/types/: coefficient.rs  phase_factor.rs  scalar.rs
core/src/test_utils/: mod.rs
core/src/types/: mod.rs
core/src/types/shot_count/: mod.rs
core/stabilizer-ch-form-rust/: Cargo.toml
core/stabilizer-ch-form-rust/src/: lib.rs
core/stabilizer-ch-form-rust/src/api/comp_basis/: to_statevector.rs
core/stabilizer-ch-form-rust/src/api/debug/: mod.rs
core/stabilizer-ch-form-rust/src/api/gates/: h.rs  pauli_application.rs  sqrt_x.rs  x.rs  z.rs
core/stabilizer-ch-form-rust/src/api/operations/: inner_product.rs  measure.rs
core/stabilizer-ch-form-rust/src/api/representation/: mod.rs
core/stabilizer-ch-form-rust/src/api/representation/parser/: mod.rs
core/stabilizer-ch-form-rust/src/api/structure/: kron.rs  permute.rs
core/stabilizer-ch-form-rust/src/core/: mod.rs
core/stabilizer-ch-form-rust/src/core/internal/comp_basis/: mod.rs
core/stabilizer-ch-form-rust/src/core/internal/left_multiplication/: cz.rs  h.rs  swap.rs  x.rs  y.rs  z.rs
core/stabilizer-ch-form-rust/src/core/internal/operations/: inner_product.rs  measure.rs  project.rs
core/stabilizer-ch-form-rust/src/core/internal/right_multiplication/: cx.rs  cz.rs
core/stabilizer-ch-form-rust/src/core/internal/structure/: discard.rs  kron.rs  permute.rs
core/stabilizer-ch-form-rust/src/core/internal/update_utils/: resolve_superposition.rs
core/stabilizer-ch-form-rust/src/error/: mod.rs
core/stabilizer-ch-form-rust/src/types/: mod.rs
core/stabilizer-ch-form-rust/src/types/pauli/: mod.rs
core/stabilizer-ch-form-rust/tests/: gate_api.rs  inner_product.rs  kron_product.rs  measurement.rs
core/tests/: mod.rs  test_random_clifford_uniformity.rs
core/tests/common/: mod.rs
core/tests/resources/4q_100g_cx-cz-h-s-sdg-sx-sxdg-t-tdg-x-z/: circuit.qasm  ref.sv
core/tests/resources/4q_100g_cx-h-s-t/: circuit.qasm
core/tests/resources/4q_50g_cx-h-s-t/: circuit.qasm  ref.sv
crates/necstar/: Cargo.toml  README.md
crates/necstar/src/: lib.rs
crates/necstar/src/circuit/: mod.rs  parser.rs  random_clifford.rs
crates/necstar/src/state/magic_states/: cat_state.rs  t_state.rs
crates/necstar/src/state/stabilizer_decomposed_state/: kron.rs  mod.rs  norm.rs  projection.rs
crates/necstar/src/state/types/: phase_factor.rs
crates/necstar/src/test_utils/: mod.rs
crates/necstar/src/types/shot_count/: mod.rs
crates/stabilizer-ch-form-rust/: Cargo.toml  README.md
crates/stabilizer-ch-form-rust/src/circuit/: mod.rs  parser.rs  random_clifford.rs
crates/stabilizer-ch-form-rust/src/form/: discard.rs  get_qubit_state.rs  matrix_operations.rs  mod.rs  permute.rs
crates/stabilizer-ch-form-rust/src/form/left_multiplication/: cx.rs  h.rs  mod.rs  sqrt_x.rs
crates/stabilizer-ch-form-rust/src/form/right_multiplication/: cz.rs  s.rs
crates/stabilizer-ch-form-rust/src/form/types/: mod.rs  scalar.rs
crates/stabilizer-ch-form-rust/src/test_utils/: mod.rs
crates/stabilizer-ch-form-rust/src/types/pauli/: pauli_term.rs
docs/: conf.py  index.rst  requirements.txt
docs/api/: index.rst
python/: Cargo.toml  LICENSE  README.md
python-bindings/: Cargo.toml  necstar.pyi
python-bindings/necstar/: __init__.py  __init__.pyi  circuit.pyi  gate.pyi  pauli_string.pyi  state.pyi
python-bindings/src/: circuit.rs  gate.rs  lib.rs  pauli_string.rs  state.rs
python/necstar/: circuit.pyi  gate.pyi  necstar.pyi  pauli_string.pyi
python/src/: circuit.rs  pauli_string.rs  utils.rs
src/: lib.rs  stabilizer_decomposed_state.rs
src/api/: mod.rs
src/api/circuit/: mod.rs
src/api/gates/: mod.rs
src/api/structure/: mod.rs
src/circuit/: gates.rs  mod.rs
src/circuit/gate_applications/: mod.rs
src/circuit/gates/: mod.rs
src/circuit/manipulations/: mod.rs
src/circuit/parser/: mod.rs
src/error/: mod.rs
src/internal/: mod.rs
src/internal/magic_states/: mod.rs  t_state.rs
src/internal/types/: mod.rs
src/simulator/: mod.rs
src/simulator/api/: mod.rs
src/simulator/compiler/: errors.rs  mod.rs
src/simulator/stabilizer_decomposed_state/: mod.rs
src/state/: mod.rs
src/state/compiler/: error.rs  mod.rs
src/state/magic_states/: mod.rs
src/state/stabilizer_decomposed_state/: inner_product.rs  mod.rs  pauli_application.rs
src/state/types/: mod.rs
src/test_utils/: mod.rs
src/types/: mod.rs
src/types/error/: mod.rs
src/types/pauli/: mod.rs
src/types/result/: mod.rs  shot_count.rs
stabilizer-ch-form-rust/: Cargo.toml
stabilizer-ch-form-rust/src/: lib.rs
stabilizer-ch-form-rust/src/circuit/: clifford_circuit.rs  clifford_gate.rs  mod.rs  parser.rs  random_clifford.rs
stabilizer-ch-form-rust/src/core/: mod.rs
stabilizer-ch-form-rust/src/error/: mod.rs
stabilizer-ch-form-rust/src/form/: amplitude.rs  discard.rs  gate_application.rs  get_qubit_state.rs  inner_product.rs  (+7 more)
stabilizer-ch-form-rust/tests/: from_qasm.rs  gate_api.rs  inner_product.rs  kron_product.rs  measurement.rs  qasm.rs  random_clifford_uniformity.rs  random_state.rs
tests/: local_import.rs  mod.rs  test_circuit.py  test_gate.py  test_pauli_string.py  test_qiskit_validation.py  test_state_calculation.py  test_state_initialization.py  test_state_simulation.py
validation/: test.py
(+109 files in other folders)
