[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "python-bindings/Cargo.toml"
python-source = "python-bindings"

[project]
name = "necstar"
version = "0.1.0"
description = "A high-performance near-Clifford quantum circuit simulator."
authors = [
  { name = "Yuki Watanabe", email = "sample@sample.com" },
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.poetry]
package-mode = false
name = "necstar"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.group.dev.dependencies]
qiskit = "2.2.1"
maturin = "^1.0"
pytest = "^7.4.0"