[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "python-bindings/Cargo.toml"
python-source = "python-bindings"

[project]
name = "necstar"
version = "1.0.0"
description = "A stabilizer decomposition based quantum circuit simulator implemented in Rust with Python bindings."
authors = [
  { name = "Yuki Watanabe", email = "ywatanabe.r5p@gmail.com" },
]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.poetry]
package-mode = false
name = "necstar"
version = "1.0.0"
description = "A stabilizer decomposition based quantum circuit simulator implemented in Rust with Python bindings."
authors = ["Yuki Watanabe <ywatanabe.r5p@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"

[tool.poetry.group.dev.dependencies]
qiskit = "2.2.1"
maturin = "^1.0"
pytest = "^8.0.0"
numpy = "^1.24.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^9.0.4"
sphinx-autoapi = "^3.6.1"
sphinx-autodoc-typehints = "^3.6.0"
sphinx-rtd-theme = "^3.0.2"
