[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "python/Cargo.toml"
python-source = "python"

[project]
name = "necstar"
version = "0.1.0"
description = "A stabilizer decomposition based quantum circuit simulator implemented in Rust with Python bindings."
authors = [
  { name = "Yuki Watanabe", email = "ywatanabe.r5p@gmail.com" },
]
license = {text = "MIT"}
readme = "python/README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry]
package-mode = false
name = "necstar"
version = "0.1.0"
description = "A stabilizer decomposition based quantum circuit simulator implemented in Rust with Python bindings."
authors = ["Yuki Watanabe <ywatanabe.r5p@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"

[tool.poetry.group.dev.dependencies]
qiskit = "2.2.1"
maturin = "^1.0"
pytest = "^8.0.0"
numpy = "^1.24.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^9.0.4"
sphinx-autoapi = "^3.6.1"
sphinx-autodoc-typehints = "^3.6.0"
sphinx-rtd-theme = "^3.0.2"
