[package]
name = "necstar"
version = "0.1.0"
edition = "2024"
authors = ["Yuki Watanabe <ywatanabe.r5p@gmail.com>"]
license = "MIT"
repository = "https://github.com/mutekichi/necstar"
homepage = "https://github.com/mutekichi/necstar"
description = "A stabilizer decomposition based quantum circuit simulator core library implemented in Rust."
documentation = "https://mutekichi.github.io/necstar/rust/necstar/"
readme = "README.md"
keywords = ["quantum computing", "simulation", "stabilizer", "T-gate"]
categories = ["science", "physics", "simulation"]

[dependencies]
ndarray = "0.15"
num-complex = "0.4"
regex = "1"
lazy_static = "1.4"
num-traits = "0.2"
num-bigint = "0.4"
rand = { version = "0.8", features = ["std_rng"] }
rand_distr = "0.4"
thiserror = "1.0"
katexit = "0.1"
stabilizer-ch-form-rust = { version = "0.1.0", path = "../stabilizer-ch-form-rust" }