[package]
name = "stabilizer-ch-form-rust"
version = "0.1.0"
edition = "2024"
authors = ["Yuki Watanabe <ywatanabe.r5p@gmail.com>"]
license = "MIT"
repository = "https://github.com/mutekichi/necstar"
homepage = "https://github.com/mutekichi/necstar"
description = "A Rust library implementing CH form representation of stabilizer states for quantum computing simulations."
documentation = "https://mutekichi.github.io/necstar/rust/stabilizer_ch_form_rust/"
readme = "README.md"
keywords = ["quantum-computing", "stabilizer", "CH-form", "simulation"]
categories = ["science", "simulation"]

[dependencies]
ndarray = "0.15"
num-complex = "0.4"
num-traits = "0.2"
rand="0.8"
rayon = "1.5"
itertools = "0.10"
approx = "0.5"
regex = "1"
lazy_static = "1.4"
thiserror = "1.0"